@@ -17,19 +17,21 @@
 
 package org.apache.commons.math.random;
 
-//import java.io.EOFException;
-import java.io.Serializable;
-//import java.io.BufferedReader;
-//import java.io.FileReader;
-//import java.io.File;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
 import java.io.IOException;
-//import java.io.InputStreamReader;
-//import java.net.URL;
+import java.io.InputStreamReader;
+import java.io.Serializable;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.commons.math.stat.descriptive.SummaryStatistics;
+import org.apache.commons.math.MathRuntimeException;
+import org.apache.commons.math.exception.util.LocalizedFormats;
 import org.apache.commons.math.stat.descriptive.StatisticalSummary;
+import org.apache.commons.math.stat.descriptive.SummaryStatistics;
+import org.apache.commons.math.util.FastMath;
 
 /**
  * Implements <code>EmpiricalDistribution</code> interface.  This implementation
@@ -56,21 +58,30 @@ import org.apache.commons.math.stat.descriptive.StatisticalSummary;
  *    entry per line.</li>
  * </ul></p>
  *
- * @version $Revision: 617850 $ $Date: 2008-02-02 11:01:29 -0700 (Sat, 02 Feb 2008) $
+ * @version $Revision: 1003886 $ $Date: 2010-10-02 23:04:44 +0200 (sam. 02 oct. 2010) $
  */
 public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistribution {
 
     /** Serializable version identifier */
-    private static final long serialVersionUID = -6773236347582113490L;
+    private static final long serialVersionUID = 5729073523949762654L;
 
     /** List of SummaryStatistics objects characterizing the bins */
-    private ArrayList binStats = null;
+    private final List<SummaryStatistics> binStats;
 
     /** Sample statistics */
     private SummaryStatistics sampleStats = null;
 
+    /** Max loaded value */
+    private double max = Double.NEGATIVE_INFINITY;
+
+    /** Min loaded value */
+    private double min = Double.POSITIVE_INFINITY;
+
+    /** Grid size */
+    private double delta = 0d;
+
     /** number of bins */
-    private int binCount = 1000;
+    private final int binCount;
 
     /** is the distribution loaded? */
     private boolean loaded = false;
@@ -79,29 +90,30 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     private double[] upperBounds = null;
 
     /** RandomData instance to use in repeated calls to getNext() */
-    private RandomData randomData = new RandomDataImpl();
+    private final RandomData randomData = new RandomDataImpl();
 
     /**
      * Creates a new EmpiricalDistribution with the default bin count.
      */
     public EmpiricalDistributionImpl() {
-        binStats = new ArrayList();
+        binCount = 1000;
+        binStats = new ArrayList<SummaryStatistics>();
     }
 
     /**
      * Creates a new EmpiricalDistribution  with the specified bin count.
-     * 
+     *
      * @param binCount number of bins
      */
     public EmpiricalDistributionImpl(int binCount) {
         this.binCount = binCount;
-        binStats = new ArrayList();
+        binStats = new ArrayList<SummaryStatistics>();
     }
 
      /**
      * Computes the empirical distribution from the provided
      * array of numbers.
-     * 
+     *
      * @param in the input data array
      */
     public void load(double[] in) {
@@ -109,8 +121,8 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
         try {
             da.computeStats();
             fillBinStats(in);
-        } catch (Exception e) {
-            throw new RuntimeException(e.getMessage());
+        } catch (IOException e) {
+            throw new MathRuntimeException(e);
         }
         loaded = true;
 
@@ -119,86 +131,76 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     /**
      * Computes the empirical distribution using data read from a URL.
      * @param url  url of the input file
-     * 
+     *
      * @throws IOException if an IO error occurs
      */
-//    public void load(URL url) throws IOException {
-//        BufferedReader in =
-//            new BufferedReader(new InputStreamReader(url.openStream()));
-//        try {
-//            DataAdapter da = new StreamDataAdapter(in);
-//            try {
-//                da.computeStats();
-//            } catch (Exception e) {
-//                throw new IOException(e.getMessage());
-//            }
-//            if (sampleStats.getN() == 0) {
-//                throw new EOFException("URL " + url + " contains no data");
-//            }
-//            in = new BufferedReader(new InputStreamReader(url.openStream()));
-//            fillBinStats(in);
-//            loaded = true;
-//        } finally {
-//           if (in != null) {
-//               try {
-//                   in.close();
-//               } catch (Exception ex) {
-//                   // ignore
-//               }
-//           }
-//        }
-//    }
+    public void load(URL url) throws IOException {
+        BufferedReader in =
+            new BufferedReader(new InputStreamReader(url.openStream()));
+        try {
+            DataAdapter da = new StreamDataAdapter(in);
+            da.computeStats();
+            if (sampleStats.getN() == 0) {
+                throw MathRuntimeException.createEOFException(LocalizedFormats.URL_CONTAINS_NO_DATA,
+                                                              url);
+            }
+            in = new BufferedReader(new InputStreamReader(url.openStream()));
+            fillBinStats(in);
+            loaded = true;
+        } finally {
+           try {
+               in.close();
+           } catch (IOException ex) {
+               // ignore
+           }
+        }
+    }
 
     /**
      * Computes the empirical distribution from the input file.
-     * 
+     *
      * @param file the input file
      * @throws IOException if an IO error occurs
      */
-//    public void load(File file) throws IOException {
-//        BufferedReader in = new BufferedReader(new FileReader(file));
-//        try {
-//            DataAdapter da = new StreamDataAdapter(in);
-//            try {
-//                da.computeStats();
-//            } catch (Exception e) {
-//                throw new IOException(e.getMessage());
-//            }
-//            in = new BufferedReader(new FileReader(file));
-//            fillBinStats(in);
-//            loaded = true;
-//        } finally {
-//            if (in != null) {
-//                try {
-//                    in.close();
-//                } catch (Exception ex) {
-//                    // ignore
-//                }
-//            }
-//        }
-//    }
+    public void load(File file) throws IOException {
+        BufferedReader in = new BufferedReader(new FileReader(file));
+        try {
+            DataAdapter da = new StreamDataAdapter(in);
+            da.computeStats();
+            in = new BufferedReader(new FileReader(file));
+            fillBinStats(in);
+            loaded = true;
+        } finally {
+            try {
+                in.close();
+            } catch (IOException ex) {
+                // ignore
+            }
+        }
+    }
 
     /**
      * Provides methods for computing <code>sampleStats</code> and
      * <code>beanStats</code> abstracting the source of data.
      */
     private abstract class DataAdapter{
-        /** 
+
+        /**
          * Compute bin stats.
-         * 
-         * @param min minimum value
-         * @param delta  grid size
-         * @throws Exception  if an error occurs computing bin stats
+         *
+         * @throws IOException  if an error occurs computing bin stats
          */
-        public abstract void computeBinStats(double min, double delta)
-                throws Exception;
+        public abstract void computeBinStats() throws IOException;
+
         /**
          * Compute sample statistics.
-         * 
-         * @throws Exception if an error occurs computing sample stats
+         *
+         * @throws IOException if an error occurs computing sample stats
          */
-        public abstract void computeStats() throws Exception;
+        public abstract void computeStats() throws IOException;
+
     }
+
     /**
      * Factory of <code>DataAdapter</code> objects. For every supported source
      * of data (array of doubles, file, etc.) an instance of the proper object
@@ -207,121 +209,106 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     private class DataAdapterFactory{
         /**
          * Creates a DataAdapter from a data object
-         * 
+         *
          * @param in object providing access to the data
          * @return DataAdapter instance
          */
         public DataAdapter getAdapter(Object in) {
-//            if (in instanceof BufferedReader) {
-//                BufferedReader inputStream = (BufferedReader) in;
-//                return new StreamDataAdapter(inputStream);
-//            } else 
-            if (in instanceof double[]) {
+            if (in instanceof BufferedReader) {
+                BufferedReader inputStream = (BufferedReader) in;
+                return new StreamDataAdapter(inputStream);
+            } else if (in instanceof double[]) {
                 double[] inputArray = (double[]) in;
                 return new ArrayDataAdapter(inputArray);
             } else {
-                throw new IllegalArgumentException(
-                    "Input data comes from the" + " unsupported source");
+                throw MathRuntimeException.createIllegalArgumentException(
+                      LocalizedFormats.INPUT_DATA_FROM_UNSUPPORTED_DATASOURCE,
+                      in.getClass().getName(),
+                      BufferedReader.class.getName(), double[].class.getName());
             }
         }
     }
     /**
      * <code>DataAdapter</code> for data provided through some input stream
      */
-//    private class StreamDataAdapter extends DataAdapter{
-//        
-//        /** Input stream providng access to the data */
-//        private BufferedReader inputStream;
-//        
-//        /**
-//         * Create a StreamDataAdapter from a BufferedReader
-//         * 
-//         * @param in BufferedReader input stream
-//         */
-//        public StreamDataAdapter(BufferedReader in){
-//            super();
-//            inputStream = in;
-//        }
-//        /**
-//         * Computes binStats
-//         * 
-//         * @param min  minimum value
-//         * @param delta  grid size
-//         * @throws IOException if an IO error occurs
-//         */
-//        public void computeBinStats(double min, double delta)
-//                throws IOException {
-//            String str = null;
-//            double val = 0.0d;
-//            while ((str = inputStream.readLine()) != null) {
-//                val = Double.parseDouble(str);
-//                SummaryStatistics stats =
-//                    (SummaryStatistics) binStats.get(findBin(min, val, delta));
-//                stats.addValue(val);
-//            }
-//
-//            inputStream.close();
-//            inputStream = null;
-//        }
-//        /**
-//         * Computes sampleStats
-//         * 
-//         * @throws IOException if an IOError occurs
-//         */
-//        public void computeStats() throws IOException {
-//            String str = null;
-//            double val = 0.0;
-//            sampleStats = new SummaryStatistics();
-//            while ((str = inputStream.readLine()) != null) {
-//                val = new Double(str).doubleValue();
-//                sampleStats.addValue(val);
-//            }
-//            inputStream.close();
-//            inputStream = null;
-//        }
-//    }
+    private class StreamDataAdapter extends DataAdapter{
+
+        /** Input stream providing access to the data */
+        private BufferedReader inputStream;
+
+        /**
+         * Create a StreamDataAdapter from a BufferedReader
+         *
+         * @param in BufferedReader input stream
+         */
+        public StreamDataAdapter(BufferedReader in){
+            super();
+            inputStream = in;
+        }
+
+        /** {@inheritDoc} */
+        @Override
+        public void computeBinStats() throws IOException {
+            String str = null;
+            double val = 0.0d;
+            while ((str = inputStream.readLine()) != null) {
+                val = Double.parseDouble(str);
+                SummaryStatistics stats = binStats.get(findBin(val));
+                stats.addValue(val);
+            }
+
+            inputStream.close();
+            inputStream = null;
+        }
+
+        /** {@inheritDoc} */
+        @Override
+        public void computeStats() throws IOException {
+            String str = null;
+            double val = 0.0;
+            sampleStats = new SummaryStatistics();
+            while ((str = inputStream.readLine()) != null) {
+                val = Double.valueOf(str).doubleValue();
+                sampleStats.addValue(val);
+            }
+            inputStream.close();
+            inputStream = null;
+        }
+    }
 
     /**
      * <code>DataAdapter</code> for data provided as array of doubles.
      */
-    private class ArrayDataAdapter extends DataAdapter{
-        
+    private class ArrayDataAdapter extends DataAdapter {
+
         /** Array of input  data values */
         private double[] inputArray;
-        
+
         /**
          * Construct an ArrayDataAdapter from a double[] array
-         * 
+         *
          * @param in double[] array holding the data
          */
         public ArrayDataAdapter(double[] in){
             super();
             inputArray = in;
         }
-        /**
-         * Computes sampleStats
-         * 
-         * @throws IOException if an IO error occurs
-         */
+
+        /** {@inheritDoc} */
+        @Override
         public void computeStats() throws IOException {
             sampleStats = new SummaryStatistics();
             for (int i = 0; i < inputArray.length; i++) {
                 sampleStats.addValue(inputArray[i]);
             }
         }
-        /**
-         * Computes binStats
-         * 
-         * @param min  minimum value
-         * @param delta  grid size
-         * @throws IOException  if an IO error occurs
-         */
-        public void computeBinStats(double min, double delta)
-            throws IOException {
+
+        /** {@inheritDoc} */
+        @Override
+        public void computeBinStats() throws IOException {
             for (int i = 0; i < inputArray.length; i++) {
                 SummaryStatistics stats =
-                    (SummaryStatistics) binStats.get(
-                            findBin(min, inputArray[i], delta));
+                    binStats.get(findBin(inputArray[i]));
                 stats.addValue(inputArray[i]);
             }
         }
@@ -329,21 +316,15 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
 
     /**
      * Fills binStats array (second pass through data file).
-     * 
+     *
      * @param in object providing access to the data
      * @throws IOException  if an IO error occurs
      */
     private void fillBinStats(Object in) throws IOException {
-        // Load array of bin upper bounds -- evenly spaced from min - max
-        double min = sampleStats.getMin();
-        double max = sampleStats.getMax();
-        double delta = (max - min)/(new Double(binCount)).doubleValue();
-        double[] binUpperBounds = new double[binCount];
-        binUpperBounds[0] = min + delta;
-        for (int i = 1; i< binCount - 1; i++) {
-            binUpperBounds[i] = binUpperBounds[i-1] + delta;
-        }
-        binUpperBounds[binCount -1] = max;
+        // Set up grid
+        min = sampleStats.getMin();
+        max = sampleStats.getMax();
+        delta = (max - min)/(Double.valueOf(binCount)).doubleValue();
 
         // Initialize binStats ArrayList
         if (!binStats.isEmpty()) {
@@ -357,62 +338,50 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
         // Filling data in binStats Array
         DataAdapterFactory aFactory = new DataAdapterFactory();
         DataAdapter da = aFactory.getAdapter(in);
-        try {
-            da.computeBinStats(min, delta);
-        } catch (Exception e) {
-            if(e instanceof RuntimeException){
-                throw new RuntimeException(e.getMessage());
-            }else{
-                throw new IOException(e.getMessage());
-            }
-        }
+        da.computeBinStats();
 
         // Assign upperBounds based on bin counts
         upperBounds = new double[binCount];
         upperBounds[0] =
-        ((double)((SummaryStatistics)binStats.get(0)).getN())/
-        (double)sampleStats.getN();
+        ((double) binStats.get(0).getN()) / (double) sampleStats.getN();
         for (int i = 1; i < binCount-1; i++) {
             upperBounds[i] = upperBounds[i-1] +
-            ((double)((SummaryStatistics)binStats.get(i)).getN())/
-            (double)sampleStats.getN();
+            ((double) binStats.get(i).getN()) / (double) sampleStats.getN();
         }
         upperBounds[binCount-1] = 1.0d;
     }
-    
+
     /**
      * Returns the index of the bin to which the given value belongs
-     * 
-     * @param min  the minimum value
+     *
      * @param value  the value whose bin we are trying to find
-     * @param delta  the grid size
      * @return the index of the bin containing the value
      */
-    private int findBin(double min, double value, double delta) {
-        return Math.min(
-                Math.max((int) Math.ceil((value- min) / delta) - 1, 0), 
+    private int findBin(double value) {
+        return FastMath.min(
+                FastMath.max((int) FastMath.ceil((value- min) / delta) - 1, 0),
                 binCount - 1);
         }
 
     /**
      * Generates a random value from this distribution.
-     * 
+     *
      * @return the random value.
      * @throws IllegalStateException if the distribution has not been loaded
      */
     public double getNextValue() throws IllegalStateException {
 
         if (!loaded) {
-            throw new IllegalStateException("distribution not loaded");
+            throw MathRuntimeException.createIllegalStateException(LocalizedFormats.DISTRIBUTION_NOT_LOADED);
         }
 
         // Start with a uniformly distributed random number in (0,1)
-        double x = Math.random();
+        double x = FastMath.random();
 
         // Use this to select the bin and generate a Gaussian within the bin
         for (int i = 0; i < binCount; i++) {
            if (x <= upperBounds[i]) {
-               SummaryStatistics stats = (SummaryStatistics)binStats.get(i);
+               SummaryStatistics stats = binStats.get(i);
                if (stats.getN() > 0) {
                    if (stats.getStandardDeviation() > 0) {  // more than one obs
                         return randomData.nextGaussian
@@ -423,14 +392,14 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
                }
            }
         }
-        throw new RuntimeException("No bin selected");
+        throw new MathRuntimeException(LocalizedFormats.NO_BIN_SELECTED);
     }
 
     /**
      * Returns a {@link StatisticalSummary} describing this distribution.
      * <strong>Preconditions:</strong><ul>
      * <li>the distribution must be loaded before invoking this method</li></ul>
-     * 
+     *
      * @return the sample statistics
      * @throws IllegalStateException if the distribution has not been loaded
      */
@@ -440,7 +409,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
 
     /**
      * Returns the number of bins.
-     * 
+     *
      * @return the number of bins.
      */
     public int getBinCount() {
@@ -448,25 +417,51 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     }
 
     /**
-     * Returns an ArrayList of {@link SummaryStatistics} instances containing
-     * statistics describing the values in each of the bins.  The ArrayList is
+     * Returns a List of {@link SummaryStatistics} instances containing
+     * statistics describing the values in each of the bins.  The list is
      * indexed on the bin number.
-     * 
+     *
      * @return List of bin statistics.
      */
-    public List getBinStats() {
+    public List<SummaryStatistics> getBinStats() {
         return binStats;
     }
 
     /**
-     * Returns (a fresh copy of) the array of upper bounds for the bins.
-       Bins are: <br/>
+     * <p>Returns a fresh copy of the array of upper bounds for the bins.
+     * Bins are: <br/>
      * [min,upperBounds[0]],(upperBounds[0],upperBounds[1]],...,
-     *  (upperBounds[binCount-1],max]
-     * 
+     *  (upperBounds[binCount-2], upperBounds[binCount-1] = max].</p>
+     *
+     * <p>Note: In versions 1.0-2.0 of commons-math, this method
+     * incorrectly returned the array of probability generator upper
+     * bounds now returned by {@link #getGeneratorUpperBounds()}.</p>
+     *
      * @return array of bin upper bounds
+     * @since 2.1
      */
     public double[] getUpperBounds() {
+        double[] binUpperBounds = new double[binCount];
+        binUpperBounds[0] = min + delta;
+        for (int i = 1; i < binCount - 1; i++) {
+            binUpperBounds[i] = binUpperBounds[i-1] + delta;
+        }
+        binUpperBounds[binCount - 1] = max;
+        return binUpperBounds;
+    }
+
+    /**
+     * <p>Returns a fresh copy of the array of upper bounds of the subintervals
+     * of [0,1] used in generating data from the empirical distribution.
+     * Subintervals correspond to bins with lengths proportional to bin counts.</p>
+     *
+     * <p>In versions 1.0-2.0 of commons-math, this array was (incorrectly) returned
+     * by {@link #getUpperBounds()}.</p>
+     *
+     * @since 2.1
+     * @return array of upper bounds of subintervals used in data generation
+     */
+    public double[] getGeneratorUpperBounds() {
         int len = upperBounds.length;
         double[] out = new double[len];
         System.arraycopy(upperBounds, 0, out, 0, len);
@@ -475,7 +470,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
 
     /**
      * Property indicating whether or not the distribution has been loaded.
-     * 
+     *
      * @return true if the distribution has been loaded
      */
     public boolean isLoaded() {
